bin/test/Fall_21_Test_Cases/Good/LO-1/lvl1-good-1.lo
// test if...else control block
int a, b;
String c;

{
  if((a = b)) {
     c = "Hello World";
  }
  else {
     c = "say Goodbye";
  }
}
