bin/test/Fall_21_Test_Cases/Bad/LO-1/lvl1-bad-medium-sa.lo
// bad case: missing if statement
int a;
{
  else
  {
  a=5;
  }
  
}